--- a/src/components/Global/Header/styles.css
+++ b/src/components/Global/Header/styles.css
@@ -1,9 +1,70 @@
-@import "tailwindcss";
+@reference "tailwindcss";
 
 .header {
-    @apply fixed top-0 left-0 w-full px-4 py-6;
+    @apply sticky top-0 left-0 flex justify-center w-full bg-white dark:bg-black z-50 
+        transition-all duration-300 ease-in-out h-auto
+    ;
 
-    .link {
-        @apply text-lg font-bold text-gray-900 dark:text-white hover:text-blue-950 dark:hover:text-blue-100 transition-colors;
+    &.open {
+        @apply h-screen;
     }
+}
+
+@keyframes shimmer {
+    0% { background-position: 0% 50%; }
+    100% { background-position: 100% 50%; }
+}
+
+.header .link {
+    @apply text-lg font-bold text-gray-900 dark:text-white hover:text-blue-950 dark:hover:text-blue-100 transition-colors;
+
+    &.active {
+        background: linear-gradient(to right, hsl(0, 100%, 30%), hsl(60, 100%, 30%), hsl(120, 100%, 30%), hsl(180, 100%, 30%), hsl(240, 100%, 30%), hsl(300, 100%, 30%), hsl(0, 100%, 30%), hsl(60, 100%, 30%), hsl(120, 100%, 30%), hsl(180, 100%, 30%)) 0 0 / 1000%;
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        animation: shimmer 5s linear infinite;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    .header .link.active {
+        background: linear-gradient(to right, hsl(0, 100%, 70%), hsl(60, 100%, 70%), hsl(120, 100%, 70%), hsl(180, 100%, 70%), hsl(240, 100%, 70%), hsl(300, 100%, 70%), hsl(0, 100%, 70%), hsl(60, 100%, 70%), hsl(120, 100%, 70%), hsl(180, 100%, 70%)) 0 0 / 1000%;
+        -webkit-background-clip: text;
+        background-clip: text;
+    }
+}
+
+.header__wrapper {
+    @apply
+        px-4 py-6 relative max-w-7xl w-full mx-auto
+        flex flex-col md:flex-row items-center md:justify-between md:space-x-8
+        border-b-3 border-gray-800 dark:border-gray-200
+    ;
+}
+
+.header__control {
+    @apply w-full md:w-auto flex items-center justify-between md:space-x-8;
+}
+
+.header__menu {
+    @apply
+        bg-white dark:bg-black
+        flex flex-col md:flex-row items-center
+        space-y-8 md:space-y-0 md:space-x-8
+        /* absolute md:static
+        bottom-0 left-0 */
+        translate-y-0
+        w-full md:w-auto
+        transition-all duration-300 ease-in-out
+        max-h-0 md:max-h-none
+        overflow-hidden
+    ;
+
+    &.open {
+        @apply max-h-screen md:max-h-none p-8;
+    }
+}
+
+.header__menu__toggle {
+    @apply md:hidden;
 }
