--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@
 }
 
 body {
-  @apply min-h-screen flex flex-col justify-between;
+  @apply min-h-screen flex flex-col justify-between bg-white dark:bg-black;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
@@ -79,5 +79,5 @@ button {
 }
 
 .content-holder {
-  @apply bg-white dark:bg-black grow flex flex-col items-center justify-center px-6 py-12;
+  @apply grow flex flex-col items-center justify-center px-4 py-12 pt-26;
 }
