--- a/src/components/Global/CustomCursor/styles.css
+++ b/src/components/Global/CustomCursor/styles.css
@@ -8,7 +8,7 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background: var(--foreground);
+  background: var(--background);
   mix-blend-mode: difference;
   pointer-events: none;
   transform-origin: left top;
@@ -28,7 +28,7 @@
 .cursor-inner {
   @apply fixed;
   pointer-events: none;
-  background: var(--foreground);
+  background: var(--background);
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -44,6 +44,12 @@
 
   &.hover {
     animation: cursor-pulse 1s infinite;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .custom-cursor, .cursor-inner {
+    background: var(--foreground);
   }
 }
 
