--- a/src/components/Global/Footer/styles.css
+++ b/src/components/Global/Footer/styles.css
@@ -1,5 +1,13 @@
 @reference "tailwindcss";;
 
-.footer {
-    @apply dark:bg-gray-900 bg-gray-200 text-black dark:text-white p-6;
+@layer components {
+    .footer {
+        @apply dark:bg-gradient-to-b from-gray-900 via-gray-900 to-gray-800 dark:text-white
+            bg-gradient-to-b from-gray-500 via-gray-500 to-gray-200
+            text-black p-6 pb-40;
+    }
+    
+    .dark .footer {
+        @apply bg-gradient-to-b from-gray-900 via-gray-900 to-gray-800 text-white;
+    }
 }
