--- a/src/components/Global/Header/styles.css
+++ b/src/components/Global/Header/styles.css
@@ -1,7 +1,9 @@
 @reference "tailwindcss";
 
 .header {
-    @apply fixed top-0 left-0 flex justify-center w-full bg-white/70 dark:bg-black/70 z-50 
+    @apply fixed bottom-6 left-1/2 transform -translate-x-1/2
+        flex justify-center w-full
+        max-w-7xl px-4 z-50
         transition-all duration-300 ease-in-out h-auto
     ;
 
@@ -15,7 +17,7 @@
 }
 
 .header .link {
-    @apply text-lg font-bold text-gray-900 dark:text-white hover:text-blue-950 dark:hover:text-blue-100 transition-colors;
+    @apply text-lg font-bold text-gray-900 hover:text-blue-950 transition-colors;
 
     &.active {
         background: linear-gradient(to right, hsl(300, 100%, 30%), hsl(0, 100%, 30%), hsl(60, 100%, 30%), hsl(120, 100%, 30%), hsl(180, 100%, 30%), hsl(240, 100%, 30%), hsl(300, 100%, 30%), hsl(0, 100%, 30%), hsl(60, 100%, 30%)) 0 0 / 1000%;
@@ -25,7 +27,8 @@
         animation: shimmer 5s linear infinite alternate;
     }
 }
-@media (prefers-color-scheme: dark) {
+
+.dark {
     .header .link.active {
         background: linear-gradient(to right, hsl(300, 100%, 70%), hsl(0, 100%, 70%), hsl(60, 100%, 70%), hsl(120, 100%, 70%), hsl(180, 100%, 70%), hsl(240, 100%, 70%), hsl(300, 100%, 70%), hsl(0, 100%, 70%), hsl(60, 100%, 70%)) 0 0 / 1000%;
         -webkit-background-clip: text;
@@ -35,10 +38,19 @@
 
 .header__wrapper {
     @apply
-        px-4 py-6 relative max-w-7xl w-full mx-auto
+        px-6 sm:px-8 py-6 relative max-w-7xl w-full mx-auto
         flex flex-col md:flex-row items-center md:justify-between md:space-x-8
-        border-b-3 border-gray-800 dark:border-gray-200
+        rounded-2xl z-50 bg-white/70
+        border-3 border-gray-600
     ;
+}
+
+.dark .header__wrapper {
+    @apply bg-black/70 border-gray-400;
+}
+
+.dark .header .link {
+    @apply text-white hover:text-blue-100;
 }
 
 .header__control {
